# operahpc-fpcschool

./: Env_MMM.sh  LICENSE  README.md
code_snippets/ex3/: mori_tanaka.cxx
imposedPressure/: CMakeLists.txt  readme.md
imposedPressure/BubbleImposedMacroDisplacements/: CMakeLists.txt  Elasticity.mfront
imposedPressure/BubbleImposedMacroDisplacements/include/Common/: Memory.hxx  Print.hxx
imposedPressure/BubbleImposedMacroDisplacements/include/OperaHPC/: BubbleDescription.hxx  Utilities.hxx
imposedPressure/BubbleImposedMacroDisplacements/src/: BubbleDescription.cxx  Bubbles.cxx  Utilities.cxx
imposedPressure/scripts/: run_case_bis.sh
scripts/25spheres/: 25spheres.py  post_processing.py  run_case.sh
